# odysseus-desktop

./: CMakeLists.txt  backend.cpp  backend.h  desktopview.cpp  desktopview.h  main.cpp  main.qml
cmake/: FindXCB.cmake
